Move stuff around

--- a/SG16-JS/index.htm
+++ b/SG16-JS/index.htm
@@ -185,15 +185,13 @@
                         <option value="walkabout">Walkabout</option>
                         <option value="colours">Colours</option>
                     </select>
+                    <button id="loadBtn">Load & Run</button>
+                    <button id="resetBtn" class="reset">Reset</button>
                 </div>
                 <textarea id="program" placeholder="Enter program here, e.g.:
 10 00 00 00 00 05 01
 10 00 00 00 02 10 01
 05 00 02 21 02 05 01"></textarea>
-                <div class="controls">
-                    <button id="loadBtn">Load & Run</button>
-                    <button id="resetBtn" class="reset">Reset</button>
-                </div>
                 <div class="status" id="status">Click the grid to focus for keyboard input</div>
             </div>
         </div>
@@ -213,6 +211,14 @@
                     <tr><td>0xE2</td><td id="var-E2">00</td></tr>
                     <tr><td>0xE3</td><td id="var-E3">00</td></tr>
                 </table>
+            </div>
+
+            <div class="panel">
+                <h3>Reference</h3>
+                <ul>
+                    <li><a href="readme.htm">Docs</a></li>
+                    <li><a href="colours.htm">Colours</a></li>
+                </ul>
             </div>
         </div>
     </div>
