--- a/SG16-JS/index.htm
+++ b/SG16-JS/index.htm
@@ -216,7 +216,7 @@
             <div class="panel">
                 <h3>Reference</h3>
                 <ul>
-                    <li><a href="readme.htm">Docs</a></li>
+                    <li><a href="../">Docs</a></li>
                     <li><a href="colours.htm">Colours</a></li>
                 </ul>
             </div>
